--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,3 +6,7 @@ app_lucky_number:
     path: /lucky/number
     controller: App\Controller\LuckyController::number
     
+navbar:
+    path: /navbar
+    controller: App\Controller\DefaultController::navbarAction
+    
